@@ -49,6 +49,7 @@ import slimeknights.tconstruct.library.recipe.casting.material.MaterialFluidReci
 import slimeknights.tconstruct.library.recipe.material.MaterialRecipe;
 import slimeknights.tconstruct.library.tools.definition.module.material.ToolMaterialHook;
 import slimeknights.tconstruct.library.tools.helper.ToolBuildHandler;
+import slimeknights.tconstruct.library.tools.helper.TooltipUtil;
 import slimeknights.tconstruct.library.tools.item.IModifiable;
 import slimeknights.tconstruct.library.tools.nbt.MaterialNBT;
 import slimeknights.tconstruct.library.tools.part.IMaterialItem;
@@ -70,7 +71,10 @@ import java.util.Optional;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-/** Base class for material content pages */
+/**
+ * Base class for material content pages.
+ * TODO 1.21: move to {@link slimeknights.tconstruct.library.client.book.content.material}.
+ */
 public abstract class AbstractMaterialContent extends PageContent {
   /** List of fallback items for the icon if no material recipes. */
   private static final List<Supplier<? extends IMaterialItem>> FALLBACKS = new ArrayList<>();
@@ -98,6 +102,8 @@ public abstract class AbstractMaterialContent extends PageContent {
   public boolean detailed = false;
   @SerializedName("show_all_tools")
   public boolean showAllTools = false;
+  /** Additional suffix on the title from the section */
+  public transient Component titleSuffix = null;
 
   public AbstractMaterialContent(MaterialVariantId materialVariant, boolean detailed) {
     this.materialName = materialVariant.toString();
@@ -188,7 +194,11 @@ public abstract class AbstractMaterialContent extends PageContent {
 
   /** Gets the title of this page to display in the index */
   public Component getTitleComponent() {
-    return MaterialTooltipCache.getDisplayName(getMaterialVariant());
+    Component material = MaterialTooltipCache.getDisplayName(getMaterialVariant());
+    if (titleSuffix != null) {
+      return Component.translatable(TooltipUtil.KEY_FORMAT, material, titleSuffix);
+    }
+    return material;
   }
 
   @Override
@@ -321,24 +331,23 @@ public abstract class AbstractMaterialContent extends PageContent {
     // regular casting recipes
     List<MaterialFluidRecipe> fluids = MaterialCastingLookup.getCastingFluids(materialId);
     if (!fluids.isEmpty()) {
-      ItemElement elementItem = new TinkerItemElement(0, 0, 1, fluids.stream().flatMap(recipe -> recipe.getFluids().stream())
-                                                                     .map(fluid -> new ItemStack(fluid.getFluid().getBucket()))
-                                                                     .collect(Collectors.toList()));
-      FluidStack firstFluid = fluids.stream()
-                                    .flatMap(recipe -> recipe.getFluids().stream())
-                                    .findFirst().orElse(FluidStack.EMPTY);
-      elementItem.tooltip = List.of(
-        CASTABLE,
-        Component.translatable(CAST_FROM, firstFluid.getDisplayName()).withStyle(ChatFormatting.GRAY)
-      );
-      displayTools.add(elementItem);
+      // get a list of all fluids from just visible recipes
+      List<FluidStack> filtered = fluids.stream().filter(r -> !r.isHideInBook()).flatMap(recipe -> recipe.getFluids().stream()).toList();
+      if (!filtered.isEmpty()) {
+        ItemElement elementItem = new TinkerItemElement(0, 0, 1, filtered.stream().map(fluid -> new ItemStack(fluid.getFluid().getBucket())).toList());
+        elementItem.tooltip = List.of(
+          CASTABLE,
+          Component.translatable(CAST_FROM, filtered.get(0).getDisplayName()).withStyle(ChatFormatting.GRAY)
+        );
+        displayTools.add(elementItem);
+      }
     }
 
     // composite casting
     List<MaterialFluidRecipe> composites = MaterialCastingLookup.getCompositeFluids(materialId);
     for (MaterialFluidRecipe composite : composites) {
       MaterialVariant input = composite.getInput();
-      if (input != null && !materialVariant.matchesVariant(input.getVariant())) {
+      if (!composite.isHideInBook() && input != null && !materialVariant.matchesVariant(input.getVariant())) {
         MaterialVariantId inputId = input.getVariant();
         // TODO: filter out tool parts that cannot be casted due to a composite cast conflict
         List<ItemStack> compositeParts = MaterialCastingLookup.getAllItemCosts().stream()
